// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XML helpers buildChangesetXml Should build a stringified OSM changeset 1`] = `
"
    <osm>
      <changeset>
        <tag k=\\"created_by\\" v=\\"me\\"/>
        <tag k=\\"comment\\" v=\\"my comment\\"/>
      </changeset>
    </osm>"
`;

exports[`XML helpers buildChangesetXml Should build a stringified OSM changeset 2`] = `
"
    <osm>
      <changeset>
        <tag k=\\"created_by\\" v=\\"\\"/>
        <tag k=\\"comment\\" v=\\"\\"/>
      </changeset>
    </osm>"
`;
